<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/titleTxt"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/radGrpTitleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/ragGrp1Title"
        android:textSize="28sp" />

    <RadioGroup
        android:id="@+id/radGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <RadioButton
            android:id="@+id/beginner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/beginnerTxt" />

        <RadioButton
            android:id="@+id/intermediate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intermediateTxt" />

        <RadioButton
            android:id="@+id/advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advancedTxt" />

    </RadioGroup>

    <TextView
        android:id="@+id/dayRadGrpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/radGrp2TitleTxt"
        android:textAlignment="center"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radGrp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <RadioButton
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/threeTxt" />

        <RadioButton
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourTxt" />

        <RadioButton
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiveTxt" />

        <RadioButton
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixTxt" />

    </RadioGroup>

    <Button
        android:id="@+id/genWorkoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/btnTxt" />

</LinearLayout>